--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
 
         <section class="map section">
           <h1 class="section-title">biz bilan bog’lanish</h1>
-          <!-- <div id="map"></div> -->
+          <div id="map"></div>
           <ul class="contact-us">
             <li class="contact-item">
               <i class="fas fa-map-marker-alt"></i>
